--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a href="./portfolio.html" class="site-nav__link">Портфолио</a>
                         </li>
                         <li class="site-nav__item">
-                            <a href="/" class="site-nav__link">Контакты</a>
+                            <a href="./contacts.html" class="site-nav__link">Контакты</a>
                         </li>
                     </ul>
                 </nav>
