--- a/contacts.html
+++ b/contacts.html
@@ -81,7 +81,9 @@
  <section class="section">
             <div class="container">
                 <h1 class="section__title">Как нас найти</h1>
-                <div id="map" style="width:100%;height:400px;"></div>
+                <div id="map_container">
+    <div id="map"></div>
+</div>
 
             </div>
  </section>
@@ -161,7 +163,7 @@
             </form>
         </div>
     </footer>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYjcxCPtx3MRsY2cn5akwwsIfV6Et1gB0&callback=myMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYjcxCPtx3MRsY2cn5akwwsIfV6Et1gB0"></script>
     <script src="./js/google-maps.js"></script>
     <script src="./js/js-form.js"></script>
     <script src="./js/mobile-menu.js"></script>
