customie gm icon

--- a/contacts.html
+++ b/contacts.html
@@ -82,9 +82,8 @@
             <div class="container">
                 <h1 class="section__title">Как нас найти</h1>
                 <div id="map_container">
-    <div id="map"></div>
-</div>
-
+                <div id="map"></div>
+                </div>
             </div>
  </section>
  </main>
@@ -163,7 +162,7 @@
             </form>
         </div>
     </footer>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYjcxCPtx3MRsY2cn5akwwsIfV6Et1gB0"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYjcxCPtx3MRsY2cn5akwwsIfV6Et1gB0&callback=initMap"></script>
     <script src="./js/google-maps.js"></script>
     <script src="./js/js-form.js"></script>
     <script src="./js/mobile-menu.js"></script>
